:sparkles: add meta tags

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Last Minute Board Games NYE</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Last Minute Board Games NYE</title>
+  <meta property="og:title" content="Last Minute Board Games NYE" />
+  <meta property="og:description" content="Click to RSVP! Food, games, and countdown to 2026." />
+  <meta property="og:image" content="https://FireJuun.github.io/last-minute-2025/Last-Minute-Games.png" />
+  <meta property="og:url" content="https://FireJuun.github.io/last-minute-2025/" />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
